--- a/react/src/index.html
+++ b/react/src/index.html
@@ -4,6 +4,6 @@
         <meta charset="utf-8" />
     </head>
     <body>
-	    <div id="root" style="width: 100%;"></div>
-    </body>    
+	    <div id="root"></div>
+    </body>
 </html>
